# rust-bitcoincore-rpc-nxt

client/: Cargo.toml
client/src/: client.rs
integration_test/: Cargo.toml
integration_test/src/: main.rs
json/: Cargo.toml
json/src/: lib.rs
