[package]
name = "integration_test"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
edition = "2018"

[dependencies]
ord-bitcoincore-rpc = { path = "../client" }

bitcoin = { git = "https://github.com/russeree/rust-bitcoin.git", branch = "bitcoin-0.30.1", features = [
    "rand",
    "serde",
] }

lazy_static = "1.4.0"
log = "0.4"
